Attemted browsers fix, added favicon.
Images alt=''' were failing in safari, get started buttons background not loading, added btn-default class, all button widths too wide, strange highlight shape on get started buttons in chrome.

Attempted fix on all.

Added favicon.

--- a/app.css
+++ b/app.css
@@ -93,9 +93,7 @@ a h1:hover {
   margin-top: 20px;
   margin-bottom: 30px;
   width: 100%;
-/*  max-width: 500px;*/
-/*  max-width: 450px;
-*/  box-shadow: 3px 3px 3px rgba(0,0,0,0.2),
+  box-shadow: 3px 3px 3px rgba(0,0,0,0.2),
               5px 5px 25px rgba(0,0,0,0.1);
 }
 
@@ -186,8 +184,8 @@ a:hover, a:focus {
 
 .btn.t-btn-donate {
   font-family: sans-serif;
-  width: 250px;
-  margin-bottom: 10px;
+/*  width: 250px;
+*/  margin-bottom: 10px;
 }
 
 .navbar-nav > li > a {
@@ -224,8 +222,8 @@ p.t-checkboxes {
 
 #t-section-sm button {
   border-radius: 3px;
-  width: 60%;
-  min-width: 300px;
+/*  width: 60%;
+*/  min-width: 200px;
 }
 
 .btn h6 {
@@ -233,7 +231,8 @@ p.t-checkboxes {
   padding: 0px;
   text-align: left;
   line-height: 15px;
-  width: 500px;
+  width: auto;
+  min-width: 175px;
 }
 
 #t-homenav-linkbox-mobile {
@@ -272,4 +271,10 @@ p.t-checkboxes {
 .navbar-brand.container {
   background-color: white;
   margin-top: 3px;
+}
+
+#t-soon {
+  display: block;
+  width: 175px;
+  margin: 30px auto;
 }
